Bug 437036 - Incorrect description of parameter in python scripting docs.
Summary: Incorrect description of parameter in python scripting docs.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Documentation (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-13 11:33 UTC by noccu
Modified: 2021-05-14 09:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description noccu 2021-05-13 11:33:56 UTC
SUMMARY
Concerns: https://api.kde.org/appscomplete-api/krita-apidocs/libs/libkis/html/classWindow.html#a72ec58e53844076c1461966c34a9115c

The description for the text parameter looks to be wrong. Leaving it empty falls back to the id for shortcut labeling and results in no text for menu bar entries.
Comment 1 Halla Rempt 2021-05-14 08:49:42 UTC
Git commit 58e06ffe2c8814263495fedfb6855de82ce744ff by Halla Rempt.
Committed on 14/05/2021 at 08:48.
Pushed by rempt into branch 'master'.

Don't set the menu text on the action if it's empty

M  +3    -1    libs/libkis/Window.cpp

https://invent.kde.org/graphics/krita/commit/58e06ffe2c8814263495fedfb6855de82ce744ff
Comment 2 Halla Rempt 2021-05-14 09:46:30 UTC
Git commit 1d07c8937050a22a70262c04e59fb5400fcc4ad6 by Halla Rempt.
Committed on 14/05/2021 at 09:46.
Pushed by rempt into branch 'krita/4.3'.

Don't set the menu text on the action if it's empty
(cherry picked from commit 58e06ffe2c8814263495fedfb6855de82ce744ff)

M  +3    -1    libs/libkis/Window.cpp

https://invent.kde.org/graphics/krita/commit/1d07c8937050a22a70262c04e59fb5400fcc4ad6