Don't set the menu text on the action if it's empty

BUG:437036